# ereader_app

./: .gitignore  CLAUDE.md  README.md  profile_performance.py  pyproject.toml
.claude/commands/: architect.md  branch.md  code-review.md  commit.md  debug.md  developer.md  diff.md  gh-status.md  hint.md  issues.md  log.md  mentor.md  pm.md  pr.md  quiz.md  repo.md  reviewer.md  sprint.md  stash.md  status.md  study.md  sync.md  test.md  undo.md  ux.md  wrapup.md
docs/: COMMAND-REFERENCE.md  learning-log.md  mvp-completion.md
docs/architecture/: README.md  async-chapter-loading-architecture.md  chapter-caching-system.md  cover-extraction-system.md  epub-rendering-architecture.md  epubbook-class-design.md  image-optimization-architecture.md  keyboard-navigation-architecture.md  library-management-architecture.md  library-phase2-organization.md  library-phase3-quick-wins.md  pagination-system-architecture.md  performance-lag-diagnosis.md  phase1-ux-improvements.md  phase2-ux-immersion.md  project-structure.md  reading-themes-architecture.md
docs/reviews/: README.md  chapter-caching-implementation.md  feat-memory-monitoring.md  feat-multi-layer-caching.md  feature-continue-reading-widget.md  feature-drag-drop-import.md  feature-epub-book-skeleton-final.md  feature-epub-book-skeleton.md  feature-epub-error-handling.md  feature-epub-metadata-extraction.md  feature-epub-rendering-mvp-final.md  feature-epub-rendering-mvp.md  feature-image-downscaling.md  feature-image-rendering.md  feature-integration-testing-real-epubs.md  feature-keyboard-navigation.md  feature-library-phase3-polish.md  feature-performance-profiling.md  feature-phase-2d-position-persistence.md  (+11 more)
playground/: epub_xmlparse.py  test_real_epubs.py
scratch/: test_pyqt.py
scripts/: profile_performance.py
tests/: conftest.py
(+108 files in other folders)
